@@ -1,50 +1,57 @@
 package me.bhop.lanbroadcaster.common;
 
+import me.bhop.lanbroadcaster.common.logger.AbstractLogger;
+
 import java.io.IOException;
-import java.net.*;
+import java.io.UncheckedIOException;
+import java.net.DatagramPacket;
+import java.net.DatagramSocket;
 import java.nio.charset.StandardCharsets;
 import java.util.concurrent.*;
-import java.util.function.Supplier;
+import java.util.concurrent.atomic.AtomicInteger;
 
-import me.bhop.lanbroadcaster.common.logger.AbstractLogger;
-import static me.bhop.lanbroadcaster.common.Constants.*;
+import static me.bhop.lanbroadcaster.common.Constants.BROADCAST_ADDRESS;
+import static me.bhop.lanbroadcaster.common.Constants.BROADCAST_PORT;
 
 public final class LANBroadcaster implements Runnable {
-    private final ScheduledExecutorService EXECUTOR = Executors.newSingleThreadScheduledExecutor(
-            r -> new Thread(r, "LANBroadcasterExecutor")
+    private final ScheduledExecutorService SCHEDULED_EXECUTOR = Executors.newSingleThreadScheduledExecutor(
+            runnable -> Thread.ofPlatform().name("LANBroadcasterExecutor").unstarted(runnable)
     );
-    private final DatagramSocket socket = createSocket();
+    private final ExecutorService VIRTUAL_EXECUTOR = Executors.newVirtualThreadPerTaskExecutor();
+    private final DatagramSocket socket;
     private final String port;
-    private final Supplier<String> motdSupplier;
+    private final MOTDProvider motdProvider;
     private final AbstractLogger logger;
-    private int failCount = 0;
+    private final AtomicInteger failCount = new AtomicInteger(0);
     private boolean running = true;
     private ScheduledFuture<?> future;
 
-    public LANBroadcaster(
+    private LANBroadcaster(
             final int port,
-            final Supplier<String> motdSupplier,
-            final AbstractLogger logger
+            final MOTDProvider motdProvider,
+            final AbstractLogger logger,
+            final DatagramSocket socket
     ) {
         this.port = Integer.toString(port);
-        this.motdSupplier = motdSupplier;
+        this.motdProvider = motdProvider;
         this.logger = logger;
+        this.socket = socket;
+    }
+
+    public static LANBroadcaster initialize(
+            final int port,
+            final MOTDProvider motdProvider,
+            final AbstractLogger logger
+    ) throws Exception {
+        DatagramSocket socket = new DatagramSocket();
+        socket.setSoTimeout(3000);
+        final LANBroadcaster broadcaster = new LANBroadcaster(port, motdProvider, logger, socket);
         logger.info("Broadcasting server with port "+port+" over LAN.");
+        return broadcaster;
     }
 
     public void schedule() {
-        this.future = EXECUTOR.scheduleAtFixedRate(this, 0, 1500, TimeUnit.MILLISECONDS);
-    }
-
-    public static DatagramSocket createSocket() {
-        DatagramSocket socket = null;
-        try {
-            socket = new DatagramSocket();
-            socket.setSoTimeout(3000);
-        } catch (SocketException e) {
-            e.printStackTrace();
-        }
-        return socket;
+        this.future = SCHEDULED_EXECUTOR.scheduleAtFixedRate(this, 0, 1500, TimeUnit.MILLISECONDS);
     }
 
     @Override
@@ -53,24 +60,25 @@ public final class LANBroadcaster implements Runnable {
             future.cancel(false);
             return;
         }
-        try {
-            final byte[] ad = getAd();
+        this.getAd().thenAcceptAsync(ad -> {
             final DatagramPacket packet = new DatagramPacket(ad, ad.length, BROADCAST_ADDRESS, BROADCAST_PORT);
-            socket.send(packet);
-            failCount = 0;
-        } catch (IOException e) {
-            fail(e);
-        }
+            try {
+                socket.send(packet);
+            } catch (IOException e) {
+                throw new UncheckedIOException(e);
+            }
+            failCount.set(0);
+        }, VIRTUAL_EXECUTOR).whenCompleteAsync((r, e) -> { if (e != null) fail(e); }, VIRTUAL_EXECUTOR);
     }
 
-    private void fail(Exception e) {
-        if (failCount++ == 0) {
+    private void fail(Throwable e) {
+        if (failCount.getAndIncrement() == 0) {
             logger.warn("Failed to broadcast.", e);
         }
 
-        if (failCount < 5) {
+        if (failCount.get() < 5) {
             logger.warn("Failed to broadcast. Trying again in 10 seconds...");
-        } else if (failCount == 5) {
+        } else if (failCount.get() == 5) {
             logger.error("Broadcasting will not work until the network is fixed. Warnings disabled.");
         }
 
@@ -78,20 +86,22 @@ public final class LANBroadcaster implements Runnable {
             this.future.cancel(true);
         }
 
-        EXECUTOR.schedule(this::schedule, 8500, TimeUnit.MILLISECONDS);
+        SCHEDULED_EXECUTOR.schedule(this::schedule, 8500, TimeUnit.MILLISECONDS);
     }
 
-    private byte[] getAd() {
-        final String str = "[MOTD]" + motdSupplier.get() + "[/MOTD][AD]" + port + "[/AD]";
-        return str.getBytes(StandardCharsets.UTF_8);
+    private CompletableFuture<byte[]> getAd() {
+        return motdProvider.provideMOTD(VIRTUAL_EXECUTOR)
+                .thenApplyAsync(platformMotd -> "[MOTD]" + platformMotd + "[/MOTD][AD]" + port + "[/AD]")
+                .thenApplyAsync(formatted -> formatted.getBytes(StandardCharsets.UTF_8));
     }
 
     public void shutdown() {
         this.running = false;
         try {
-            EXECUTOR.shutdown();
+            SCHEDULED_EXECUTOR.shutdown();
             //noinspection ResultOfMethodCallIgnored
-            EXECUTOR.awaitTermination(100, TimeUnit.MILLISECONDS);
+            SCHEDULED_EXECUTOR.awaitTermination(100, TimeUnit.MILLISECONDS);
+            VIRTUAL_EXECUTOR.shutdown();
         } catch (InterruptedException e) {
             throw new RuntimeException(e);
         } finally {
